enable and disable via toggle switch

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -26,10 +26,6 @@
                 <h3>General Options</h3>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="enable-search"> Enable search</label>
-                </div>
-
-                <div class="checkbox">
                     <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
                 </div>
 
@@ -242,6 +238,7 @@
         <script src="../lib/handlebars.min.js"></script>
         <script src="js/templates.js"></script>
         <script src="js/gecko.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/options.js"></script>
         <script src="js/options-form.js"></script>
     </body>
