renaming things to make more sense

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
-    <script src="../lib/handlebars.min.js"></script>
-    <script src="../lib/dexie.min.js"></script>
-    <script src="../lib/wanakana.min.js"></script>
-    <script src="js/gecko.js"></script>
-    <script src="js/ankiconnect.js"></script>
-    <script src="js/ankinull.js"></script>
-    <script src="js/templates.js"></script>
-    <script src="js/util.js"></script>
-    <script src="js/database.js"></script>
-    <script src="js/deinflector.js"></script>
-    <script src="js/translator.js"></script>
-    <script src="js/options.js"></script>
-    <script src="js/yomichan.js"></script>
-</body>
+    <body>
+        <script src="../lib/handlebars.min.js"></script>
+        <script src="../lib/dexie.min.js"></script>
+        <script src="../lib/wanakana.min.js"></script>
+        <script src="js/templates.js"></script>
+        <script src="js/gecko.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/anki-connect.js"></script>
+        <script src="js/anki-null.js"></script>
+        <script src="js/database.js"></script>
+        <script src="js/deinflector.js"></script>
+        <script src="js/translator.js"></script>
+        <script src="js/yomichan.js"></script>
+    </body>
 </html>
