--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -3,22 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/frame.css">
     </head>
     <body>
-        <div class="spinner">
-            <img src="img/spinner.gif">
-        </div>
+        <div class="container-fluid">
+            <div class="spinner">
+                <img src="img/spinner.gif">
+            </div>
 
-        <div id="content"></div>
-        <div id="orphan">
-            <h1>Yomichan Updated!</h1>
-            <p>The Yomichan extension has been updated to a new version! In order to continue viewing definitions on this page you must reload this tab or restart your browser.</p>
-        </div>
+            <div id="content"></div>
 
-        <script src="../lib/jquery-3.1.1.min.js"></script>
-        <script src="../lib/wanakana.min.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/frame.js"></script>
+            <div id="orphan">
+                <h1>Yomichan Updated!</h1>
+                <p>The Yomichan extension has been updated to a new version! In order to continue viewing definitions on this page you must reload this tab or restart your browser.</p>
+            </div>
+
+            <script src="../lib/jquery-3.1.1.min.js"></script>
+            <script src="../lib/wanakana.min.js"></script>
+            <script src="js/util.js"></script>
+            <script src="js/frame.js"></script>
+        </div>
     </body>
 </html>
