--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -5,9 +5,18 @@
         <title>Yomichan Search</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-toggle/bootstrap-toggle.min.css">
     </head>
     <body>
+        <div class="container-fluid">
+            <p>
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default form-control" type="button">Search</button>
+                    </span>
+                </div>
+            </p>
+        </div>
         <script src="js/gecko.js"></script>
         <script src="js/search.js"></script>
     </body>
