--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -5,19 +5,24 @@
         <title>Yomichan Search</title>
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="../fg/css/frame.css">
     </head>
     <body>
         <div class="container-fluid">
             <p>
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
+                <form class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for..." id="query">
                     <span class="input-group-btn">
-                        <button class="btn btn-default form-control" type="button">Search</button>
+                        <input type="submit" class="btn btn-default form-control" id="search" value="Search">
                     </span>
-                </div>
+                </form>
             </p>
+
+            <div id="content"></div>
         </div>
+        <script src="../lib/jquery-3.1.1.min.js"></script>
         <script src="js/gecko.js"></script>
+        <script src="js/util.js"></script>
         <script src="js/search.js"></script>
     </body>
 </html>
