--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -18,6 +18,10 @@
                 </form>
             </p>
 
+            <div id="spinner">
+                <img src="img/spinner.gif">
+            </div>
+
             <div id="content"></div>
         </div>
         <script src="../lib/jquery-3.1.1.min.js"></script>
