--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="spinner">
+            <div id="spinner">
                 <img src="img/spinner.gif">
             </div>
 
