--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <script src="../lib/handlebars.min.js"></script>
-        <script src="../lib/dexie.min.js"></script>
-        <script src="../lib/wanakana.min.js"></script>
-        <script src="js/templates.js"></script>
-        <script src="js/gecko.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/anki-connect.js"></script>
-        <script src="js/anki-null.js"></script>
-        <script src="js/database.js"></script>
-        <script src="js/deinflector.js"></script>
-        <script src="js/translator.js"></script>
-        <script src="js/yomichan.js"></script>
+        <script src="/mixed/lib/handlebars.min.js"></script>
+        <script src="/mixed/lib/dexie.min.js"></script>
+        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/bg/js/templates.js"></script>
+        <script src="/bg/js/gecko.js"></script>
+        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/anki-connect.js"></script>
+        <script src="/bg/js/anki-null.js"></script>
+        <script src="/bg/js/database.js"></script>
+        <script src="/bg/js/deinflector.js"></script>
+        <script src="/bg/js/translator.js"></script>
+        <script src="/bg/js/yomichan.js"></script>
     </body>
 </html>
