--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Legal</title>
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <h3>Yomichan License</h3>
 <pre>
 Copyright (C) 2016  Alex Yatskov
