--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Options</title>
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
         <style>
             #anki-spinner, #anki-general, #anki-error,
             #dict-spinner, #dict-error, #dict-warning, #dict-purge-progress, #dict-import-progress,
@@ -75,7 +75,7 @@
 
             <div>
                 <div>
-                    <img src="img/spinner.gif" class="pull-right" id="dict-spinner" alt>
+                    <img src="/mixed/img/spinner.gif" class="pull-right" id="dict-spinner" alt>
                     <h3>Dictionaries</h3>
                 </div>
 
@@ -223,7 +223,7 @@
                         improve Yomichan!
                     </p>
                     <p>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="img/paypal.gif" alt></a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="/bg/img/paypal.gif" alt></a>
                     </p>
                 </div>
             </div>
@@ -233,12 +233,12 @@
             </div>
         </div>
 
-        <script src="../lib/jquery-3.1.1.min.js"></script>
-        <script src="../lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-        <script src="../lib/handlebars.min.js"></script>
-        <script src="js/templates.js"></script>
-        <script src="js/gecko.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/options.js"></script>
+        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/mixed/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+        <script src="/mixed/lib/handlebars.min.js"></script>
+        <script src="/bg/js/templates.js"></script>
+        <script src="/bg/js/gecko.js"></script>
+        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/options.js"></script>
     </body>
 </html>
