--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-toggle/bootstrap-toggle.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.css">
         <style type="text/css">
             body {
                 padding: 10px;
@@ -27,11 +27,11 @@
                 <button type="button" id="open-help" title="Help" class="btn btn-default btn-xs glyphicon glyphicon-question-sign"></button>
             </div>
         </p>
-        <script src="../lib/jquery-3.1.1.min.js"></script>
-        <script src="../lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-        <script src="js/gecko.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/options.js"></script>
-        <script src="js/popup.js"></script>
+        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+        <script src="/bg/js/gecko.js"></script>
+        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/options.js"></script>
+        <script src="/bg/js/popup.js"></script>
     </body>
 </html>
