--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Search</title>
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="../fg/css/frame.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/css/frame.css">
     </head>
     <body>
         <div class="container-fluid">
@@ -19,14 +19,14 @@
             </p>
 
             <div id="spinner">
-                <img src="img/spinner.gif">
+                <img src="/mixed/img/spinner.gif">
             </div>
 
             <div id="content"></div>
         </div>
-        <script src="../lib/jquery-3.1.1.min.js"></script>
-        <script src="js/gecko.js"></script>
-        <script src="js/util.js"></script>
-        <script src="js/search.js"></script>
+        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/bg/js/gecko.js"></script>
+        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/search.js"></script>
     </body>
 </html>
