--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
-        <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/frame.css">
+        <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="/mixed/css/frame.css">
     </head>
     <body>
         <div class="container-fluid">
             <div id="spinner">
-                <img src="img/spinner.gif">
+                <img src="/mixed/img/spinner.gif">
             </div>
 
             <div id="content"></div>
@@ -20,10 +20,10 @@
                 <p>The Yomichan extension has been updated to a new version! In order to continue viewing definitions on this page you must reload this tab or restart your browser.</p>
             </div>
 
-            <script src="../lib/jquery-3.1.1.min.js"></script>
-            <script src="../lib/wanakana.min.js"></script>
-            <script src="js/util.js"></script>
-            <script src="js/frame.js"></script>
+            <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+            <script src="/mixed/lib/wanakana.min.js"></script>
+            <script src="/fg/js/util.js"></script>
+            <script src="/fg/js/frame.js"></script>
         </div>
     </body>
 </html>
