--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Welcome to Yomichan!</title>
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="page-header">
                 <h1>Welcome to Yomichan!</h1>
             </div>
@@ -23,10 +23,10 @@
                 </p>
 
                 <ol>
-                    <li>Click on the <img src="../img/icon16.png" alt> icon in the browser toolbar to open the Yomichan options page.</li>
+                    <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan options page.</li>
                     <li>Import the dictionaries (bundled or custom) you wish to use for term and Kanji searches.</li>
                     <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
-                    <li>Click on the <img src="../fg/img/play_audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
+                    <li>Click on the <img src="/mixed/fg/img/play_audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
                 </ol>
             </div>
