--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -17,13 +17,17 @@
 
             <div id="orphan">
                 <h1>Yomichan Updated!</h1>
-                <p>The Yomichan extension has been updated to a new version! In order to continue viewing definitions on this page you must reload this tab or restart your browser.</p>
+                <p>
+                    The Yomichan extension has been updated to a new version! In order to continue
+                    viewing definitions on this page you must reload this tab or restart your browser.
+                </p>
             </div>
 
             <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
             <script src="/mixed/lib/wanakana.min.js"></script>
             <script src="/fg/js/util.js"></script>
-            <script src="/fg/js/frame.js"></script>
+            <script src="/mixed/js/display.js"></script>
+            <script src="/fg/js/display-frame.js"></script>
         </div>
     </body>
 </html>
