--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -24,9 +24,10 @@
 
             <div id="content"></div>
         </div>
+
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
-        <script src="/bg/js/gecko.js"></script>
         <script src="/bg/js/util.js"></script>
-        <script src="/bg/js/search.js"></script>
+        <script src="/mixed/js/display.js"></script>
+        <script src="/bg/js/display-window.js"></script>
     </body>
 </html>
