--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -127,7 +127,7 @@
 
             <div>
                 <div>
-                    <img src="img/spinner.gif" class="pull-right" id="anki-spinner" alt>
+                    <img src="/mixed/img/spinner.gif" class="pull-right" id="anki-spinner" alt>
                     <h3>Anki Options</h3>
                 </div>
 
@@ -237,7 +237,6 @@
         <script src="/mixed/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/templates.js"></script>
-        <script src="/bg/js/gecko.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/bg/js/options.js"></script>
     </body>
