--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -2,7 +2,7 @@
 <p>
     <div class="actions">
         {{#if addable}}
-            <a href="#" title="Add Kanji" class="action-add-note pending disabled" data-mode="kanji" data-index="{{@index}}"><img src="/mixed/img/add_kanji.png"></a>
+            <a href="#" title="Add Kanji" class="action-add-note pending disabled" data-mode="kanji" data-index="{{@index}}"><img src="/mixed/img/add-kanji.png"></a>
         {{/if}}
     </div>
 
