fix options loading and storing code

--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -29,9 +29,8 @@
         </p>
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-        <script src="/bg/js/gecko.js"></script>
+        <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/util.js"></script>
-        <script src="/bg/js/options.js"></script>
         <script src="/bg/js/popup.js"></script>
     </body>
 </html>
