fix options for good

--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -26,7 +26,7 @@
                     <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan options page.</li>
                     <li>Import the dictionaries (bundled or custom) you wish to use for term and Kanji searches.</li>
                     <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
-                    <li>Click on the <img src="/mixed/fg/img/play_audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
+                    <li>Click on the <img src="/mixed/img/play-audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
                     <li>Click on Kanji in the definition window to view additional information about that character.</li>
                 </ol>
             </div>
