visual improvements to search page

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -9,6 +9,13 @@
     </head>
     <body>
         <div class="container-fluid">
+            <div id="intro">
+                <div class="page-header">
+                    <h1>Yomichan Search</h1>
+                </div>
+                <p>Search your installed dictionaries by entering a Japanese expression into the field below.</p>
+            </div>
+
             <p>
                 <form class="input-group">
                     <input type="text" class="form-control" placeholder="Search for..." id="query">
