middle mouse button scanning

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -55,6 +55,10 @@
                 </div>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="middle-mouse-button-scan"> Middle mouse button scanning</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="select-matched-text"> Select matched text</label>
                 </div>
 
