--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -18,7 +18,7 @@
 
             <p>
                 <form class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for..." id="query">
+                    <input type="text" class="form-control" placeholder="Search for..." id="query" autofocus>
                     <span class="input-group-btn">
                         <input type="submit" class="btn btn-default form-control" id="search" value="Search">
                     </span>
