Add wanakana to search.html

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -32,6 +32,7 @@
             <div id="content"></div>
         </div>
 
+        <script src="/mixed/lib/wanakana.min.js"></script>
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/display.js"></script>
