add options for setting popup width, height, offset

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -45,13 +45,26 @@
                     <label for="max-displayed-results">Maximum displayed results</label>
                     <input type="number" min="1" id="max-displayed-results" class="form-control">
                 </div>
+
+                <div class="form-group options-advanced">
+                    <label>Popup size (in pixels)</label>
+                    <div class="row">
+                        <div class="col-xs-6"><input type="number" min="1" id="popup-width" class="form-control"></div>
+                        <div class="col-xs-6"><input type="number" min="1" id="popup-height" class="form-control"></div>
+                    </div>
+                </div>
+
+                <div class="form-group options-advanced">
+                    <label for="popup-offset">Popup offset (in pixels)</label>
+                    <input type="number" min="0" id="popup-offset" class="form-control">
+                </div>
             </div>
 
             <div>
                 <h3>Scanning Options</h3>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="middle-mouse-button-scan"> Middle mouse button scanning</label>
+                    <label><input type="checkbox" id="middle-mouse-button-scan"> Middle mouse button scans</label>
                 </div>
 
                 <div class="checkbox">
