--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+    </head>
     <body>
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/dexie.min.js"></script>
