--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -46,6 +46,8 @@
             <div class="glossary-item">{{#multiLine}}{{glossary.[0]}}{{/multiLine}}</div>
         {{/if}}
     </div>
+
+    <a href="#" class="term-source">Back</a>
 </p>
 {{/inline}}
 
