--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="page-header">
                 <h1>Welcome to Yomichan!</h1>
             </div>
@@ -23,11 +23,12 @@
                 </p>
 
                 <ol>
-                    <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan options page.</li>
-                    <li>Import the dictionaries (bundled or custom) you wish to use for term and Kanji searches.</li>
-                    <li>Hold down <kbd>Shift</kbd> (or the middle mouse button) as you hover over text to see term definitions.</li>
-                    <li>Click on the <img src="/mixed/img/play-audio.png" alt> icon to hear the term pronounced by a native speaker (if audio is available).</li>
-                    <li>Click on Kanji in the definition window to view additional information about that character.</li>
+                    <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan actions dialog.</li>
+                    <li>Click on the <em>monkey wrench</em> icon in the middle to open the options page.</li>
+                    <li>Import the dictionaries you wish to use for term and Kanji searches.</li>
+                    <li>Hold down <kbd>Shift</kbd> key or the middle mouse button as you move your mouse over text to display definitions.</li>
+                    <li>Click on the <img src="/mixed/img/play-audio.png" alt> icon to hear the term pronounced by a native speaker.</li>
+                    <li>Click on individual Kanji in the term definition results to view additional information about those characters.</li>
                 </ol>
             </div>
         </div>
