--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -6,28 +6,31 @@
         <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/mixed/css/frame.css">
+        <style type="text/css">
+            .entry {
+                padding: 10px;
+            }
+        </style>
     </head>
     <body>
-        <div class="container-fluid">
-            <div id="spinner">
-                <img src="/mixed/img/spinner.gif">
-            </div>
-
-            <div id="content"></div>
-
-            <div id="orphan">
-                <h1>Yomichan Updated!</h1>
-                <p>
-                    The Yomichan extension has been updated to a new version! In order to continue
-                    viewing definitions on this page you must reload this tab or restart your browser.
-                </p>
-            </div>
-
-            <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
-            <script src="/mixed/lib/wanakana.min.js"></script>
-            <script src="/fg/js/util.js"></script>
-            <script src="/mixed/js/display.js"></script>
-            <script src="/fg/js/display-frame.js"></script>
+        <div id="spinner">
+            <img src="/mixed/img/spinner.gif">
         </div>
+
+        <div id="content"></div>
+
+        <div id="orphan">
+            <h1>Yomichan Updated!</h1>
+            <p>
+                The Yomichan extension has been updated to a new version! In order to continue
+                viewing definitions on this page you must reload this tab or restart your browser.
+            </p>
+        </div>
+
+        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/fg/js/util.js"></script>
+        <script src="/mixed/js/display.js"></script>
+        <script src="/fg/js/display-frame.js"></script>
     </body>
 </html>
