--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="/mixed/css/frame.css">
         <style type="text/css">
             .entry {
-                padding: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
             }
         </style>
     </head>
