--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -21,11 +21,13 @@
         <div id="content"></div>
 
         <div id="orphan">
-            <h1>Yomichan Updated!</h1>
-            <p>
-                The Yomichan extension has been updated to a new version! In order to continue
-                viewing definitions on this page you must reload this tab or restart your browser.
-            </p>
+            <div class="container-fluid">
+                <h1>Yomichan Updated!</h1>
+                <p>
+                    The Yomichan extension has been updated to a new version! In order to continue
+                    viewing definitions on this page you must reload this tab or restart your browser.
+                </p>
+            </div>
         </div>
 
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
