--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -34,6 +34,7 @@
 
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/mixed/js/util.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
         <script src="/bg/js/display-window.js"></script>
