--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -33,6 +33,7 @@
         <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
         <script src="/fg/js/util.js"></script>
+        <script src="/mixed/js/util.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/fg/js/display-frame.js"></script>
     </body>
