more audio handling improvements

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -7,6 +7,7 @@
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/dexie.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/mixed/js/util.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/bg/js/anki-connect.js"></script>
