fix conflicting hotkeys

--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -18,12 +18,12 @@
     </head>
     <body>
         <p>
-            <input type="checkbox" id="enable-search" title="Toggle (Alt + Delete)">
+            <input type="checkbox" id="enable-search">
         </p>
         <p>
             <div class="btn-group" style="white-space: nowrap">
                 <button type="button" id="open-search" title="Search (Alt + Insert)" class="btn btn-default btn-xs glyphicon glyphicon-search"></button>
-                <button type="button" id="open-options" title="Options (Alt + End)" class="btn btn-default btn-xs glyphicon glyphicon-wrench"></button>
+                <button type="button" id="open-options" title="Options" class="btn btn-default btn-xs glyphicon glyphicon-wrench"></button>
                 <button type="button" id="open-help" title="Help" class="btn btn-default btn-xs glyphicon glyphicon-question-sign"></button>
             </div>
         </p>
