file reorg, updating jquery and handlebars

--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Legal</title>
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
     </head>
     <body>
         <div class="container-fluid">
