--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Options</title>
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
         <style>
             #anki-spinner, #anki-general, #anki-error,
             #dict-spinner, #dict-error, #dict-warning, #dict-purge-progress, #dict-import-progress,
@@ -250,8 +250,8 @@
             </div>
         </div>
 
-        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
-        <script src="/mixed/lib/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+        <script src="/mixed/lib/jquery.min.js"></script>
+        <script src="/mixed/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
