--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Yomichan Search</title>
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="/mixed/css/frame.css">
     </head>
     <body>
@@ -32,7 +32,7 @@
             <div id="content"></div>
         </div>
 
-        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/util.js"></script>
         <script src="/mixed/js/display.js"></script>
