--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
-        <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/mixed/lib/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/mixed/css/frame.css">
         <style type="text/css">
             .entry {
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <script src="/mixed/lib/jquery-3.1.1.min.js"></script>
+        <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
         <script src="/fg/js/util.js"></script>
         <script src="/mixed/js/util.js"></script>
