--- a/tmpl/fields.html
+++ b/tmpl/fields.html
@@ -83,7 +83,19 @@
 {{/inline}}
 
 {{#*inline "sentence"}}
-    {{~definition.sentence~}}
+    {{~#if definition.cloze}}{{definition.cloze.sentence}}{{/if~}}
+{{/inline}}
+
+{{#*inline "cloze-prefix"}}
+    {{~#if definition.cloze}}{{definition.cloze.prefix}}{{/if~}}
+{{/inline}}
+
+{{#*inline "cloze-body"}}
+    {{~#if definition.cloze}}{{definition.cloze.body}}{{/if~}}
+{{/inline}}
+
+{{#*inline "cloze-suffix"}}
+    {{~#if definition.cloze}}{{definition.cloze.suffix}}{{/if~}}
 {{/inline}}
 
 {{#*inline "tags"}}
