--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -26,10 +26,6 @@
                 <h3>General Options</h3>
 
                 <div class="checkbox">
-                    <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
-                </div>
-
-                <div class="checkbox">
                     <label><input type="checkbox" id="group-terms-results"> Group term results</label>
                 </div>
 
@@ -39,6 +35,15 @@
 
                 <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
+                </div>
+
+                <div class="checkbox">
+                    <label><input type="checkbox" id="audio-playback-buttons"> Audio playback buttons</label>
+                </div>
+
+                <div class="form-group options-advanced">
+                    <label for="audio-playback-volume">Audio playback volume (percent)</label>
+                    <input type="number" min="0" max="100" id="audio-playback-volume" class="form-control">
                 </div>
 
                 <div class="form-group options-advanced">
