add hint about specifying anki model fields

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -193,6 +193,13 @@
                         <input type="text" id="interface-server" class="form-control">
                     </div>
 
+                    <p>
+                        Specify the information you would like included in your flashcards in the field editor below.
+                        Please be aware that Anki requires the first field in the model to be unique. It is highly recommended
+                        that you set it to <code>{expression}</code> for term flashcards and <code>{character}</code> for
+                        Kanji flashcards.
+                    </p>
+
                     <div id="anki-format">
                         <ul class="nav nav-tabs">
                             <li class="active"><a href="#terms" data-toggle="tab">Terms</a></li>
