--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -193,7 +193,7 @@
                         <input type="text" id="interface-server" class="form-control">
                     </div>
 
-                    <p>
+                    <p class="help-block">
                         Specify the information you would like included in your flashcards in the field editor below.
                         Please be aware that Anki requires the first field in the model to be unique. It is highly recommended
                         that you set it to <code>{expression}</code> for term flashcards and <code>{character}</code> for
