--- a/ext/bg/guide.html
+++ b/ext/bg/guide.html
@@ -9,28 +9,24 @@
     <body>
         <div class="container">
             <div class="page-header">
-                <h1>Welcome to Yomichan!</h1>
+                <h1>Yomichan Usage Guide</h1>
             </div>
 
-            <p>Thank you for downloading this extension! I hope that Yomichan will help you on your language learning journey.</p>
+            <p>
+                Read the steps below to get up and running with Yomichan. For complete documentation,
+                visit the <a href="https://foosoft.net/projects/yomichan/" target="_blank">official homepage</a>.
+            </p>
 
-            <div>
-                <h2>Quick Guide</h2>
+            <ol>
+                <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan actions dialog.</li>
+                <li>Click on the <em>monkey wrench</em> icon in the middle to open the options page.</li>
+                <li>Import the dictionaries you wish to use for term and Kanji searches.</li>
+                <li>Hold down <kbd>Shift</kbd> key or the middle mouse button as you move your mouse over text to display definitions.</li>
+                <li>Click on the <img src="/mixed/img/play-audio.png" alt> icon to hear the term pronounced by a native speaker.</li>
+                <li>Click on individual Kanji in the term definition results to view additional information about those characters.</li>
+            </ol>
 
-                <p>
-                    Read the steps below to get up and running with Yomichan. For complete documentation,
-                    visit the <a href="https://foosoft.net/projects/yomichan/" target="_blank">official homepage</a>.
-                </p>
-
-                <ol>
-                    <li>Click on the <img src="/mixed/img/icon16.png" alt> icon in the browser toolbar to open the Yomichan actions dialog.</li>
-                    <li>Click on the <em>monkey wrench</em> icon in the middle to open the options page.</li>
-                    <li>Import the dictionaries you wish to use for term and Kanji searches.</li>
-                    <li>Hold down <kbd>Shift</kbd> key or the middle mouse button as you move your mouse over text to display definitions.</li>
-                    <li>Click on the <img src="/mixed/img/play-audio.png" alt> icon to hear the term pronounced by a native speaker.</li>
-                    <li>Click on individual Kanji in the term definition results to view additional information about those characters.</li>
-                </ol>
-            </div>
+            <p>This startup notification can be turned off on the Yomichan options page.</p>
         </div>
     </body>
 </html>
