--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -26,6 +26,10 @@
                 <h3>General Options</h3>
 
                 <div class="checkbox">
+                    <label><input type="checkbox" id="show-usage-guide"> Show usage guide on startup</label>
+                </div>
+
+                <div class="checkbox">
                     <label><input type="checkbox" id="group-terms-results"> Group term results</label>
                 </div>
 
