add option to disable searching of alphanumeric text, fixes #47

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -93,6 +93,10 @@
                     <label><input type="checkbox" id="search-form-text-fields"> Search form text fields</label>
                 </div>
 
+                <div class="checkbox">
+                    <label><input type="checkbox" id="search-alphanumeric"> Search alphanumeric text</label>
+                </div>
+
                 <div class="form-group options-advanced">
                     <label for="scan-delay">Scan delay</label>
                     <input type="number" min="1" id="scan-delay" class="form-control">
